# python-flask-server-generated/swagger_server/controllers/db_manager.py
@@ -4,7 +4,7 @@ import uuid
 import psycopg2
 
 import __main__ as mmm
-from swagger_server.controllers.parser import parse_competition
+from swagger_server.controllers.parser import parse_competition, parse_match
 from swagger_server.models.bets_result import BetsResult  # noqa: E501
 from swagger_server.models.competition import Competition  # noqa: E501
 from swagger_server.models.match import Match  # noqa: E501
@@ -14,6 +14,12 @@ def update_competition(competition_id, url):
     res = parse_competition(url)
     db = DataBaseManagemantSystem()
     db.update_competition(competition_id, res)
+
+
+def update_match(competition_id, url):
+    res = parse_match(url)
+    db = DataBaseManagemantSystem()
+    db.update_match(competition_id, res)
 
 
 class DataBaseManagemantSystem:
@@ -127,9 +133,45 @@ class DataBaseManagemantSystem:
         request = f"INSERT INTO sport_betting.competition_bets (competition_id, user_id, result) VALUES ('{special_id}', '{username}', NULL)"
         cur.execute(request)
         self.con.commit()
-        mmm.scheduler.add_job(update_competition, 'interval', hours=1, args=(special_id, competition['parsing_ref']),
-                              id=special_id)
+        if competition['parsing_ref'] is not None:
+            mmm.scheduler.add_job(update_competition, 'interval', hours=1,
+                                  args=(special_id, competition['parsing_ref']),
+                                  id=special_id)
         return special_id
+
+    def add_match(self, username, competition_id, match, special_bets):
+        cur = self.con.cursor()
+        request = f"SELECT * FROM sport_betting.competitions_info WHERE created_by = '{username}' AND special_id='{competition_id}'"
+        cur.execute(request)
+        ans = cur.fetchone()
+        if ans is None:
+            raise Exception()
+        if match['parsing_ref'] is not None:
+            request = f"INSERT INTO sport_betting.matches_info (competition_id, id, name, is_active, start_time, first_team_name, second_team_name, parsing_ref) VALUES ('{competition_id}', '{match['id']}', '{match['name']}', {match['is_active']}, '{match['start_time']}', '{match['team1_name']}', '{match['team2_name']}', '{match['parsing_ref']}')"
+        else:
+            request = f"INSERT INTO sport_betting.matches_info (competition_id, id, name, is_active, start_time, first_team_name, second_team_name) VALUES ('{competition_id}', '{match['id']}', '{match['name']}', {match['is_active']}, '{match['start_time']}', '{match['team1_name']}', '{match['team2_name']}')"
+        cur.execute(request)
+        self.con.commit()
+        for bet in special_bets:
+            request = f"INSERT INTO sport_betting.special_created_bets (match_id, bet_name) VALUES ('{match['id']}', '{bet}')"
+            cur.execute(request)
+            self.con.commit()
+        if match['parsing_ref'] is not None:
+            mmm.scheduler.add_job(update_match, 'interval', hours=1, args=(competition_id, match['parsing_ref']),
+                                  id=f"{competition_id}_{match['parsing_ref']}")
+
+    def update_match(self, competition_id, match):
+        cur = self.con.cursor()
+        if match['end_time'] is None:
+            request = f"UPDATE sport_betting.matches_info SET is_active={match['is_active']}, start_time='{match['start_time']}', first_team_result={match['team1_res']}, second_team_result={match['team2_res']}) WHERE competition_id='{competition_id}' and id='{match['id']}' RETURNING is_active"
+        else:
+            request = f"UPDATE sport_betting.matches_info SET is_active={match['is_active']}, start_time='{match['start_time']}', end_time='{match['end_time']}', first_team_result={match['team1_res']}, second_team_result={match['team2_res']}) WHERE competition_id='{competition_id}' and id='{match['id']}' RETURNING is_active"
+        cur.execute(request)
+        ans = cur.fetchone()
+        if ans is not None and not ans[0]:
+            self.update_bets_result(competition_id, match)
+            mmm.scheduler.remove_job(job_id=f"{competition_id}_{match['id']}")
+        self.con.commit()
 
     def get_competition(self, competition_id):
         cur = self.con.cursor()
@@ -217,7 +259,7 @@ class DataBaseManagemantSystem:
         cur.execute(request)
         ans = cur.fetchone()
         if ans is not None and not ans[0]:
-            mmm.scheduler.remove_job(id=competition_id)
+            mmm.scheduler.remove_job(job_id=competition_id)
         cur = self.con.cursor()
         for match in competition['ended_matches']:
             if match['end_time'] is None:
@@ -268,27 +310,12 @@ class DataBaseManagemantSystem:
             request = f"SELECT bets, result FROM sport_betting.match_bets WHERE match_id='{match_id}' and competition_id='{competition_id}' and user_id='{username}'"
             cur.execute(request)
             ans2 = cur.fetchone()
+        request = f"SELECT bet_name FROM sport_betting.special_created_bets WHERE match_id='{match_id}' and competition_id='{competition_id}'"
+        cur.execute(request)
+        ans3 = cur.fetchall()
+        special_bets = []
+        for b in ans3:
+            special_bets.append(b[0])
         return Match(match_id, ans1[6], ans1[0], ans1[1], ans1[2], ans1[3], ans1[5],
-                     ans2[1] if ans2 is not None else None, ans2[0] if ans2 is not None else None, ans1[4])
-
-    # def get_competition(self, competition_id):
-    #      cur = self.con.cursor()
-    #      request = f"SELECT * FROM sport_betting.competitions_info WHERE special_id='{competition_id}'"
-    #      cur.execute(request)
-    #      ans = cur.fetchone()
-    #      if ans is None:
-    #          raise Exception()
-    #      request = f"INSERT INTO sport_betting.competitions_info (created_by, id, name, is_active, parsing_ref) VALUES ('{username}', '{competition['competition_id']}', '{competition['name']}', {competition['is_active']}, '{competition['parsing_ref']}')"
-    #      cur.execute(request)
-    #      cur = self.con.cursor()
-    #      for match in competition['ended_matches']:
-    #          request = f"INSERT INTO sport_betting.matches_info (competition_id, id, name, is_active, parsing_ref, start_time, end_time, first_team_name, second_team_name, first_team_result, second_team_result) VALUES ('{competition['competition_id']}', '{match['id']}', '{match['name']}', {match['is_active']}, '{match['parsing_ref']}', '{match['start_time']}', '{match['end_time']}', '{match['team1_name']}', '{match['team2_name']}', {match['team1_res']}, {match['team2_res']})"
-    #          cur.execute(request)
-    #      cur = self.con.cursor()
-    #      for match in competition['not_ended_matches']:
-    #          request = f"INSERT INTO sport_betting.matches_info (competition_id, id, name, is_active, parsing_ref, start_time, first_team_name, second_team_name) VALUES ('{competition['competition_id']}', '{match['id']}', '{match['name']}', {match['is_active']}, '{match['parsing_ref']}', '{match['start_time']}', '{match['team1_name']}', '{match['team2_name']}')"
-    #          cur.execute(request)
-    #      cur = self.con.cursor()
-    #      request = f"INSERT INTO sport_betting.competition_bets (competition_id, user_id, result) VALUES ('{competition['competition_id']}', '{username}', NULL)"
-    #      cur.execute(request)
-    #      self.con.commit()
+                     ans2[1] if ans2 is not None else None, ans2[0] if ans2 is not None else None, ans1[4],
+                     special_bets)
